...
                android:text="Deskripsi"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
...
                android:text="Preview"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_terbit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:strokeColor="@color/purple_04"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Sign In"
        android:textAllCaps="false"
...
