...
        android:icon="@drawable/ic_navbar_notification" />

    <item android:id="@+id/main_sell"
        android:title="@string/navbar_sell"
        android:icon="@drawable/ic_navbar_sell" />

    <item android:id="@+id/main_sale_list"
        android:title="@string/navbar_sale_list"
        android:icon="@drawable/ic_navbar_sale_list" />

    <item android:id="@+id/main_account"
        android:title="@string/navbar_account"
        android:icon="@drawable/ic_navbar_account" />

</menu>
